--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
     <title>Memory Vault</title>
 </head>
 <body>
-    <h1>Memory Vault</h1>
-    <p>test</p>
+    <header>
+        <img src="assets/mvlogo.png" alt="logo">
+        Memory Vault
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
